<resources>
    <string name="app_name">android1</string>
    <string name="bt_next">Далее</string>
    <string name="image_onboarding_description">Image onboarding</string>
    <string name="onboarding_first">ПРОЕКТНЫЙ\nПОДХОД</string>
    <string name="onboarding_second">ПРОДУКТОВЫЙ\nПОДХОД</string>
    <string name="onboarding_third">\nКЕЙСЫ</string>
    <string name="onboarding_first_descr">Качественно организовываем\nдеятельность для заимодействия\nнаших сотрудников и Заказчика</string>
    <string name="onboarding_second_descr">Оказываем услуги\nи выдаём тот результат, который\nнеобходим Заказчику и рынку</string>
    <string name="onboarding_third_descr">Понравился продукт? Хотите его\nобсудить? Мы с радостью\nответим на все ваши вопросы :)</string>
    <string name="bt_begin">Начало</string>
    <string name="error_description">Image error page</string>
    <string name="not_internet">Нет интернет\nсоединения</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_image_squares">Image squares</string>
    <string name="description_image_logo_cron">Image logo cron</string>
    <string name="description_image_it_cron_text">Image it cron text</string>
    <string name="home_header">Проектно-продуктовый подход\nк оказанию IT-услуг</string>
    <string name="cases">Кейсы</string>
    <string name="company">Компания</string>
    <string name="services">Услуги</string>
    <string name="contacts">Контакты</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="email_text">hello@it-cron.ru</string>
    <string name="send_request">Оставить\nзаявку</string>
    <string name="description_icon_facebook">Icon facebook</string>
    <string name="description_icon_instagram">Icon instagram</string>
    <string name="description_icon_telegram">Icon telegram</string>
    <string name="icon_close_description">Icon close</string>
    <string name="image_case_description">Image case</string>
    <string name="filter">Фильтр</string>
    <string name="image_ellipse_description">Image ellipse 1</string>
    <string name="case_title">Кейс</string>
    <string name="header_case_title">ГБОУ «Курчатовская школа»</string>
    <string name="task">Задача</string>
    <string name="task_description">Разработать мобильное приложение с возможность просмотра новостной ленты, а также записью на дополнительное образование (кружки)</string>
    <string name="app_allows">Приложение позволяет</string>
    <string name="icon_application_allows_description">Icon application allows</string>
    <string name="app_allows_content">Производить запись в организации дополнительного образования и формировать договор</string>
    <string name="technology">Технология</string>
    <string name="technology_description">iOS - Swift Android – Kotlin Backend - PHP</string>
    <string name="platform">Платформа</string>
    <string name="platform_description">iOS Android Backend Панель управления</string>
    <string name="button_look_website">Посмотреть сайт</string>
    <string name="contacts_info">Стать клиентом или \nпартнером!</string>
    <string name="next_case">Следующий кейс</string>
    <string name="go_to_home">Вернуться на \nГлавную</string>
    <string name="splash">Splash</string>
    <string name="image_splash_description">Image splash</string>
    <string name="filters">Фильтры</string>
    <string name="icon_clear_filter_description">Icon clear filter</string>
    <string name="title_filter">Отрасль</string>
    <string name="filter_selected">Гос.учереждения</string>
    <string name="icon_enabled_description">Icon enabled</string>
    <string name="case_not_found">По вашему запросу ничего \nне найдено.</string>
    <string name="menu_cron">menu_cron</string>
    <string name="menu_instagram">menu_instagram</string>
    <string name="menu_facebook">menu_facebook</string>
    <string name="menu_telegram">menu_telegram</string>
    <string name="image_rectangle_company_description">image rectangle company</string>
    <string name="cron_as_expected">cron as expected</string>
    <string name="motto">вот наш слоган</string>
    <string name="project_product_approach">Проектно-\nпродуктовый</string>
    <string name="project_product_content">подход к разработке \nпрограммного обеспечения</string>
    <string name="project">Проектный</string>
    <string name="product">Продуктовый</string>
    <string name="project_content">Позволяет нам качественно организовать деятельность для взаимодействия наших сотрудников и Заказчика</string>
    <string name="product_content">Оказывать услуги и выдавать тот результат, который необходим Заказчику и рынку</string>
    <string name="image_decor_company_description">image decor company</string>
    <string name="image_avatar_company_description">image avatar company description</string>
    <string name="puchow">Пухов Александр Сергеевич</string>
    <string name="puchow_job">Учредитель и руководитель \nООО «АЙТИ КРОН»</string>
    <string name="puchow_job_title">Несколько слов о зарождении и названии компании</string>
    <string name="puchow_job_paragraph1">У меня уже был опыт управления другой компанией.
В этой компании было несколько партнеров и несмотря на то,
что общее движение было согласованным, некоторые реализации я видел по-другому. Поэтому в конце 2018 года
я решил, что хочу реализовать свои идеи на все 100%.
В какой-то мере это был некий челендж. Сейчас все идет по плану :)</string>
    <string name="puchow_job_paragraph2">По поводу названия. IT – очевидно, потому что мы работаем в IT,
а CRON – связано с Linux планировщиком и это отсылка
к тому, что мы работаем, как часы.
Мы предоставляем услуги точно
в срок и с отличным качеством.
Наш слоган – cron as expected ;)</string>
    <string name="client_company">Мы сотрудничаем с клиентами, мыслящими на перспективу, чтобы трансформировать идеи в реальные продукты.</string>
    <string name="icon_logo_gazprom">icon logo gazprom</string>
    <string name="icon_logo_luck">icon_logo_luck</string>
    <string name="icon_logo_t">icon logo t+</string>
    <string name="icon_logo_meg">icon logo megaphon</string>
    <string name="icon_logo_ros">icon logo ros</string>
    <string name="icon_logo_abp">icon logo abp</string>
    <string name="icon_logo_help">icon logo help</string>
    <string name="icon_logo_kurch">icon logo kurch</string>
    <string name="icon_logo_prim">icon logo prim</string>
    <string name="icon_logo_pay">icon logo pay</string>
    <string name="icon_logo_libertex">icon logo libertex</string>
    <string name="icon_logo_atb">icon logo atb</string>
    <string name="icon_logo_skb">icon logo skb</string>
    <string name="icon_logo_lykke">icon logo lykke</string>
    <string name="customer_reviews">Отзывы клиентов</string>
    <string name="see_all">Смотреть все</string>
    <string name="icon_arrow_long">icon arrow long</string>
    <string name="reviews_content">«У меня уже был опыт управления другой компанией. В этой компании было несколько партнеров и несмотря на то, что общее движение было согласованным, некоторые реализации я видел по-другому. Поэтому в конце 2018 года я решил, что хочу реализовать свои идеи на все 100%. В какой-то мере это был некий челендж. Сейчас все идет по плану :)»</string>
    <string name="icon_slider">icon slider</string>
    <string name="communications_title">Взгляните чем мы дышим</string>
    <string name="instagram"><u>Instagram</u></string>
    <string name="facebook"><u>Facebook</u></string>
    <string name="telegram"><u>Telegram</u></string>
    <string name="join_team">Присоединяйтесь к команде</string>
    <string name="slogan_team">Таланты всегда приветствуются. Отправляй свое портфолио по адресу hr@it-cron.ru</string>
    <string name="country">Россия, Москва</string>
    <string name="street">119330, ул. Мосфильмовская, 35</string>
    <string name="phone">+7 (495) 006–13–57</string>
    <string name="contact_via">Связаться через</string>
    <string name="application">Заявка</string>
    <string name="full_brief">Заполните бриф</string>
    <string name="submit_application">Оставьте заявку, либо звоните, мы пообщаемся и сами все за вас заполним: +7 (495) 006–13–57</string>
    <string name="app_test">UX-тестирование</string>
    <string name="checkbox_app_1">Даю согласие на обработку персональных данных</string>
    <string name="checkbox_app_2">Соглашаюсь с политикой конфиденциальности</string>
    <string name="checkbox_app_span_1">обработку персональных данных</string>
    <string name="checkbox_app_span_2">политикой конфиденциальности</string>
    <string name="button_ok">Ок</string>
    <string name="phrase_phone">+7 (495) 006–13–57</string>
    <string name="phone_number">74950861357</string>
    <string name="contact_info">Контактные данные</string>
    <string name="edit_text_name">Имя</string>
    <string name="edit_text_company">Компания</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_phone">Тедефон</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="Empty" />
    <string name="valid_number_phone">Введите валидный номер телефона</string>
    <string name="valid_email">Введите валидный email</string>
    <string name="task_title">Задача</string>
    <string name="description_task">Описание</string>
    <string name="attach_file">Прикрепить файл</string>
    <string name="ps_button_attach_file">*Прикрепление файлов не обязательно</string>
    <string name="image_file">image file</string>
    <string name="photo_title">Фотография</string>
    <string name="document_title">Документ</string>
    <string name="cancel_title">Cancel</string>
    <string name="grant_permission">Please give permission to camera for this app</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_images">temp_image.jpg</string>
    <string name="authorities">ru.it_cron.intern1.fileProvider</string>
    <string name="ops_title">Упс!</string>
    <string name="file_warning">Файл не должен превышать 15 mb</string>
    <string name="attempt_file">Попробуем еще раз?</string>
    <string name="app_thank">Спасибо за вашу заявку!</string>
    <string name="app_attach">Мы свяжемся с Вами в ближайшее время.</string>
    <string name="app_call">А если у Вас «горит» и ждать нельзя, скорее звоните нам.</string>
    <string name="phone_underline"><u>+7 (495) 006–13–57</u></string>
    <string name="something_went_wrong">Что-то пошло не так...</string>
    <string name="let_s_try_again_call">Попробуем еще раз? Или позвоните нам.</string>
    <string name="ui_test">UX-тестирование</string>
    <string name="design_app">Дизайн моб. приложения</string>
    <string name="design_ui">Дизайн веб-интерфейса</string>
    <string name="develop_web">Веб-разработка и интеграции</string>
    <string name="develop_mobile">Разработка моб. приложений</string>
    <string name="strategy">"Стратегия"</string>
    <string name="creative">"Креатив"</string>
    <string name="analytics">"Аналитика"</string>
    <string name="testings">"Тестирование"</string>
    <string name="other">"Другое"</string>
    <string name="location_title">Расположение</string>
    <string name="location_address">г. Москва, ул. Мосфильмовская, д. 35, с. 2, офис 301</string>
    <string name="image_location_it_cron">image location it cron</string>
    <string name="read_full">Читать полностью</string>
    <string name="dialog_title">Восстановить "Gmail" ?</string>
    <string name="dialog_content">Вы перешли по ссылке, для которой требуется приложение "Gmail" отсутствующее на Вашем телефоне. Вы можете загрузить его из Google Play.</string>
    <string name="dialog_content_show">Показать в</string>
    <string name="dialog_content_google_play"><b>Google Play</b></string>
    <string name="dialog_content_google_slash">/</string>
    <string name="dialog_content_cancel"><b>Отменить</b> </string>
</resources>