<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mItCron"
        android:icon="@drawable/ic_cron_small"
        android:title="@string/menu_cron"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/mInstagram"
        android:icon="@drawable/ic_instagram_black"
        android:title="@string/menu_instagram"
        app:showAsAction="always" />
    <item
        android:id="@+id/mFacebook"
        android:icon="@drawable/ic_facebook_black"
        android:title="@string/menu_facebook"
        app:showAsAction="always" />
    <item
        android:id="@+id/mTelegram"
        android:icon="@drawable/ic_telegram_black"
        android:title="@string/menu_telegram"
        app:showAsAction="always" />

</menu>