<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivDecor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_decor_company_description"
        android:src="@drawable/im_ellipse_company_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_31sdp"
        android:contentDescription="@string/image_avatar_company_description"
        android:src="@drawable/avatarka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAvatar"
        style="@style/GothamProMed.16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/puchow"
        android:textAlignment="center"
        android:textColor="@color/text_company"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAvatarJob"
        style="@style/GothamProReg.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/puchow_job"
        android:textAlignment="center"
        android:textColor="@color/text_company"
        app:layout_constraintTop_toBottomOf="@+id/tvAvatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAvatarJobTitle"
        style="@style/GothamProBold.16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:lineSpacingMultiplier="1.2"
        android:paddingHorizontal="@dimen/padding_app"
        android:text="@string/puchow_job_title"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/tvAvatarJob" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAvatarJobParagraph1"
        style="@style/GothamProReg.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:lineSpacingMultiplier="1.3"
        android:paddingHorizontal="@dimen/padding_app"
        android:text="@string/puchow_job_paragraph1"
        android:textColor="@color/text_company"
        app:layout_constraintTop_toBottomOf="@+id/tvAvatarJobTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAvatarJobParagraph2"
        style="@style/GothamProReg.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:lineSpacingMultiplier="1.3"
        android:paddingHorizontal="@dimen/padding_app"
        android:text="@string/puchow_job_paragraph2"
        android:textColor="@color/text_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAvatarJobParagraph1" />

</androidx.constraintlayout.widget.ConstraintLayout>