<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCases"
        style="@style/HomeBodyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:text="@string/cases"
        app:layout_constraintBottom_toTopOf="@id/tvCompany"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCompany"
        style="@style/HomeBodyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/company"
        app:layout_constraintBottom_toTopOf="@id/tvServices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCases" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvServices"
        style="@style/HomeBodyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/services"
        app:layout_constraintBottom_toTopOf="@id/tvContacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompany" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContacts"
        style="@style/HomeBodyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/contacts"
        app:layout_constraintBottom_toTopOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvServices" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        style="@style/HomeBodyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30ssp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/personal_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContacts" />

</androidx.constraintlayout.widget.ConstraintLayout>