<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_8sdp"
    app:contentPaddingBottom="@dimen/_20sdp"
    app:contentPaddingLeft="@dimen/_16sdp"
    app:contentPaddingRight="@dimen/_16sdp"
    app:contentPaddingTop="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_64sdp"
            android:layout_height="@dimen/_64sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/image_avatar_company_description"
            android:src="@drawable/avatarka" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAvatar"
            style="@style/GothamProBold.14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/puchow"
            android:textAlignment="center"
            android:textColor="@color/text_company" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAvatarJob"
            style="@style/GothamProReg.12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/puchow_job"
            android:textAlignment="center"
            android:textColor="@color/text_company" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContent"
            style="@style/GothamProReg.12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.3"
            android:maxLines="5"
            android:text="@string/puchow_job_paragraph1"
            android:textColor="@color/text_company" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReadFull"
            style="@style/GothamProBold.14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/read_full"
            android:textColor="@color/orange" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>